# backend

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml  test.py  use custom error handling and responses
app/: database.py  main.py  models.py
app/api/v1/: api.py
app/api/v1/endpoints/: items.py
app/commands/: bootstrap_auth.py
app/core/: __init__.py  bootstrap.py  error_handler.py  middlewares.py  oauth.py  passwords.py  permissions.py  responses.py  security.py  settings.py  tokens.py
app/db/: __init__.py  engine.py  repository.py
app/dependencies/: __init__.py  rbac.py  repositories.py  services.py  session.py
app/models/: __init__.py  applications.py  auth.py  base.py  departments.py  email_notifications.py  enums.py  pagination.py  refresh_sessions.py  roles.py  saved_topics.py  skills.py  students.py  teachers.py  topic_skill.py  topics.py  user_roles.py  user_skills.py  users.py
app/routers/: __init__.py  applications.py  auth.py  departments.py  refresh_sessions.py  saved_topics.py  skills.py  students.py  teachers.py  topic_skills.py  topics.py  user_roles.py  user_skills.py  users.py
app/schemas/: errors.py
app/services/: __init__.py  applications.py  auth.py  departments.py  email_notifications.py  email_templates.py  refresh_sessions.py  roles.py  saved_topics.py  skills.py  students.py  teachers.py  topic_skill.py  topics.py  user_skills.py  users.py
app/utils/: errors.py  logger.py
deploy/nginx/: default.conf  index.html
migrations/: env.py
migrations/versions/: 01da87062b8b_создани_моделей.py  5e91468642e9_email.py  60d72167c6d3_init.py  9ba1b19d46d5_created_at_user_change.py  a006b7bb54c7_created_at_user_change.py  a28056b7fd35_add_roles_user_roles_models.py  a4382fcd0415_reset_migrations.py  b1a2c3d4e5f6_email_notifications_and_user_verify.py
tests/: test_auth_and_crud_contracts.py  test_routes_registry.py
